[package]
name = "pawd"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://lab.themackabu.dev/crates/pawd"
description = "Process analysis & watcher daemon"

[dependencies]
psutil = { version = "3.2.2", features = ["serde"] }
serde = "1.0.192"
serde_derive = "1.0.192"

[dev-dependencies]
assert_matches = "1.5.0"