[package]
name = "pawd"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://lab.themackabu.dev/crates/pawd"
description = "Process analysis & watcher daemon"

[dependencies]
serde_json = "1.0.108"
psutil = { version = "3.2.2", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }

[dev-dependencies]
assert_matches = "1.5.0"
